# Copyright(c) The Maintainers of Nanvix.
# Licensed under the MIT License.

[package]
name = "error"
version = "0.0.5"
license-file = "LICENSE.txt"
edition = "2021"
authors = ["The Maintainers of Nanvix"]
description = "Error Codes for POSIX Systems"
homepage = "https://github.com/nanvix"

[lib]
crate-type = ["lib"]

[profile.release]
opt-level = 3
debug = false
strip = "symbols"
debug-assertions = false
overflow-checks = true
lto = "fat"
panic = 'abort'
incremental = false
codegen-units = 1
rpath = false
